--- a/.github/workflows/docker_actions.yaml
+++ b/.github/workflows/docker_actions.yaml
@@ -33,7 +33,7 @@ jobs:
           with:
 # current repository 
             context: ./webFiles
-	    file: ./webFiles/Dockerfile
+	    file: https://github.com/monikamikhaiel/Web-Go-/webFiles/Dockerfile
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/HelloWorldGo:v0.1
           #labels: ${{ steps.meta.outputs.labels }}
