--- a/.github/workflows/docker_actions.yaml
+++ b/.github/workflows/docker_actions.yaml
@@ -32,8 +32,8 @@ jobs:
 
           with:
 # current repository 
-            context: ./webFiles
-	    file: Dockerfile
+            context: ./webFiles/
+	    file: ./webFiles/Dockerfile
             push: true
             tags: ${{ secrets.DOCKER_USERNAME }}/HelloWorldGo:v0.1
           #labels: ${{ steps.meta.outputs.labels }}
