--- a/.github/workflows/docker_actions.yaml
+++ b/.github/workflows/docker_actions.yaml
@@ -7,9 +7,10 @@ name: Publish Docker image
 
 on: push 
 jobs:
-  push_to_registry:
+  docker:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+#docker:
     steps:
 # extract the latest version of the code 
       - name: Check out the repo
