--- a/.github/workflows/docker_actions.yaml
+++ b/.github/workflows/docker_actions.yaml
@@ -7,7 +7,7 @@ name: Publish Docker image
 
 on: push 
 jobs:
-  docker:
+  docker_registery:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
 #docker:
@@ -17,10 +17,10 @@ jobs:
         uses: actions/checkout@v2
 # execution environment for containers 
       - name: set up QEMU
-        uses: docker/setup_qemu_action@v1
+        uses: docker/setup-qemu-action@v1
 # build the container 
       - name: set up Docker buildx 
-        uses: docker/setup_buildx_action@v1
+        uses: docker/setup-buildx-action@v1
       
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
