--- a/.github/workflows/docker_actions.yaml
+++ b/.github/workflows/docker_actions.yaml
@@ -25,8 +25,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
@@ -35,5 +35,5 @@ jobs:
           context: ./webFiles/
 #file: ./webFiles/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/HelloWorldGo:v0.1
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/HelloWorldGo:v0.1
 #labels: ${{ steps.meta.outputs.labels }}
