--- a/.github/workflows/docker_actions.yaml
+++ b/.github/workflows/docker_actions.yaml
@@ -35,5 +35,5 @@ jobs:
           context: ./webFiles/
 #file: ./webFiles/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/HelloWorldGo:v0.1
+          tags: monikamikhaiel/HelloWorldGo:v0.1
 #labels: ${{ steps.meta.outputs.labels }}
